[gd_scene load_steps=22 format=3 uid="uid://clfvobvi3rno6"]

[ext_resource type="Texture2D" uid="uid://o5281jsg2i68" path="res://assets/Art/assets_spin_wheel/spin_wheel_background.png" id="1_h5jq3"]
[ext_resource type="Script" path="res://scripts/spin_wheel.gd" id="1_oakmn"]
[ext_resource type="PackedScene" uid="uid://btw2qw0qeom58" path="res://shader_discrete_ocean.tscn" id="2_15cia"]
[ext_resource type="Texture2D" uid="uid://defxo6urikxl6" path="res://assets/Art/assets_spin_wheel/spin_wheel_button_ring.png" id="3_doaok"]
[ext_resource type="Texture2D" uid="uid://bsd6eravgnhy5" path="res://assets/Art/assets_spin_wheel/spin_wheel_button.png" id="3_i8ccs"]
[ext_resource type="Texture2D" uid="uid://42jqll3bmppa" path="res://assets/Art/assets_spin_wheel/spin_wheel_front_ok.png" id="3_w30eq"]
[ext_resource type="Texture2D" uid="uid://swfesmtw11ic" path="res://assets/Art/assets_spin_wheel/spin_wheel_button_press.png" id="4_taphi"]
[ext_resource type="Texture2D" uid="uid://cbu3r8pscyuvj" path="res://assets/Art/assets_spin_wheel/spin_wheel_arrow.png" id="6_iiacy"]
[ext_resource type="Texture2D" uid="uid://b3w1ehwtxdaeq" path="res://assets/Art/rectangle.png" id="9_5q734"]
[ext_resource type="Texture2D" uid="uid://ds3jfcv66ift" path="res://assets/Art/UI/buttons/btn_texture_normal.png" id="9_m0nv7"]
[ext_resource type="Texture2D" uid="uid://bpt6c2kcn1ske" path="res://assets/Art/UI/buttons/btn_texture_pressed.png" id="10_10qhb"]
[ext_resource type="Texture2D" uid="uid://hy8udjxjel8g" path="res://assets/Art/assets_spin_wheel/pin.png" id="10_c2uwo"]
[ext_resource type="Texture2D" uid="uid://brddidggbrkfl" path="res://assets/Art/UI/buttons/btn_texture_hover.png" id="11_6smyw"]
[ext_resource type="Theme" uid="uid://br87o6rh4kiea" path="res://text_choices.tres" id="11_e8wo5"]
[ext_resource type="Theme" uid="uid://dtjgilmtwhb0f" path="res://text_theme.tres" id="12_45tec"]
[ext_resource type="Texture2D" uid="uid://cd2xq75b3a0ld" path="res://assets/Art/assets_spin_wheel/lace_and_pin.png" id="12_bfw27"]
[ext_resource type="Texture2D" uid="uid://blbw7mmng4jov" path="res://assets/Art/assets_spin_wheel/lace.png" id="13_powl8"]
[ext_resource type="Texture2D" uid="uid://c3mihrbfgwsgm" path="res://assets/Art/assets_spin_wheel/ballpen.png" id="14_p4u2m"]
[ext_resource type="AudioStream" uid="uid://b462icuj61jty" path="res://assets/Sounds/sfx_roulette.mp3" id="19_3g6y8"]
[ext_resource type="AudioStream" uid="uid://dujbr074ufx0" path="res://assets/Sounds/congrats.mp3" id="20_tpp8v"]
[ext_resource type="AudioStream" uid="uid://4ixg86nxledu" path="res://assets/Sounds/winner.mp3" id="21_ayla2"]

[node name="spin_wheel" type="Control" node_paths=PackedStringArray("main_menu_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(440, 622)
script = ExtResource("1_oakmn")
main_menu_button = NodePath("TextureButton")

[node name="shader_discrete_ocean" parent="." instance=ExtResource("2_15cia")]
layout_mode = 1

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 364.0
offset_bottom = 133.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("9_m0nv7")
texture_pressed = ExtResource("10_10qhb")
texture_hover = ExtResource("11_6smyw")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_e8wo5")
theme_override_font_sizes/font_size = 50
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="wheel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.162
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.48
offset_top = 13.0
offset_right = 646.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.57326, 0.57326)
texture = ExtResource("1_h5jq3")
expand_mode = 1

[node name="front" type="TextureRect" parent="wheel"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 900.0
offset_bottom = 900.0
scale = Vector2(0.92, 0.92)
pivot_offset = Vector2(450, 450)
texture = ExtResource("3_w30eq")

[node name="background_button" type="TextureRect" parent="wheel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_doaok")

[node name="btn_spin" type="TextureButton" parent="wheel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.800002, 0.800002)
pivot_offset = Vector2(100, 100)
texture_normal = ExtResource("3_i8ccs")
texture_pressed = ExtResource("4_taphi")
stretch_mode = 3

[node name="arrow" type="TextureRect" parent="wheel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 181.0
grow_horizontal = 2
scale = Vector2(0.479999, 0.479999)
pivot_offset = Vector2(100, 0)
texture = ExtResource("6_iiacy")

[node name="win_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel_background" type="TextureRect" parent="win_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.5
offset_top = -201.5
offset_right = 212.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_5q734")
expand_mode = 1
stretch_mode = 4

[node name="win1_pic" type="TextureRect" parent="win_panel/panel_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -139.5
offset_right = 139.5
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_c2uwo")
expand_mode = 1
stretch_mode = 4

[node name="win2_pic" type="TextureRect" parent="win_panel/panel_background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 230.0
offset_top = -121.0
offset_right = 537.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.8326
texture = ExtResource("12_bfw27")
expand_mode = 1
stretch_mode = 4

[node name="win3_pic" type="TextureRect" parent="win_panel/panel_background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -155.0
offset_right = 200.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_powl8")
expand_mode = 1
stretch_mode = 4
flip_v = true

[node name="win4_pic" type="TextureRect" parent="win_panel/panel_background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -56.0
offset_right = 181.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_p4u2m")
expand_mode = 1
stretch_mode = 4

[node name="win_lbl" type="Label" parent="win_panel/panel_background"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -80.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("11_e8wo5")
theme_override_font_sizes/font_size = 80
text = "AWS PIN!"

[node name="btn_restart" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -113.0
offset_right = 172.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("9_m0nv7")
texture_pressed = ExtResource("10_10qhb")
texture_hover = ExtResource("11_6smyw")

[node name="Label" type="Label" parent="btn_restart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -46.0
offset_right = 94.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_45tec")
text = "Done"
horizontal_alignment = 1
vertical_alignment = 1

[node name="roulette_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_3g6y8")

[node name="congrats_lbl" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("12_45tec")
text = "CONGRATULATIONS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="congrats" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_tpp8v")

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_ayla2")

[connection signal="pressed" from="wheel/btn_spin" to="." method="_on_btn_spin_pressed"]
[connection signal="pressed" from="btn_restart" to="." method="_on_btn_restart_pressed"]
